--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,7 +9,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -18,5 +17,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
     "nodemon": "^3.1.10"
-  }
+  },
+  "description": ""
 }
